--- a/src/main/resources/templates/user/offerList.mustache
+++ b/src/main/resources/templates/user/offerList.mustache
@@ -13,16 +13,16 @@
 			<div class="d-flex justify-content-center mb-2">
 				<a href="javascript:void(0);" class="col-4 btn btn-info" onclick="openNewWindow('/resume/newWindow/{{id}}')">
 					<div>
-						<span class="badge bg-success">{{career}}</span>
-						<span class="badge bg-success">{{grade}}</span>
-						<span class="badge bg-success">{{user.address}}</span>
+						<span class="badge" style="background-color: #f9b233">{{career}}</span>
+						<span class="badge" style="background-color: #f27d0c">{{grade}}</span>
+						<span class="badge" style="background-color: #f95959">{{user.address}}</span>
 					</div>
 					<div>
-						<span class="badge bg-primary">{{user.position}}</span>
-						<span class="badge bg-warning">{{user.birth}}</span>
+						<span class="badge" style="background-color: #2f3a7d">{{user.position}}</span>
+						<span class="badge" style="background-color: black">{{user.birth}}</span>
 					</div>
 					<div>
-						{{#user.userSkillList}}<span class="badge bg-secondary me-1">{{skill.skillname}}</span>{{/user.userSkillList}}
+						{{#user.userSkillList}}<span class="badge me-1" style="background-color: #7F00FF">{{skill.skillname}}</span>{{/user.userSkillList}}
 					</div>
 				</a>
 			</div>
