디자인 수정

--- a/src/main/resources/templates/comp/recommend.mustache
+++ b/src/main/resources/templates/comp/recommend.mustache
@@ -8,7 +8,7 @@
 
 		<div class="col-9 m-auto">
 			
-			<h1 class="text-center mt-2">인재 찾기</h1>
+			<h1 class="text-center mt-2">인재 추천</h1>
 
 			
 
