--- a/src/main/resources/templates/layout/comp2header.mustache
+++ b/src/main/resources/templates/layout/comp2header.mustache
@@ -23,6 +23,6 @@
 			-->
 			<a href="/comp/{{sessionComp.userId}}/bookmarkList" class="w-100 btn btn-info">이력서 북마크</a>
 			<div class="m-2"></div>
-			<a href="/comp/recommend" class="w-100 btn btn-info">인재 찾기</a>
+			<a href="/comp/recommend" class="w-100 btn btn-info">인재 추천</a>
 			<div class="m-2"></div>
 		</div>
