--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -216,7 +216,7 @@
 								{{^sessionComp.compname}}<a class="nav-link text-white"
 								                            href="/user/recommendForm">기업추천</a>{{/sessionComp.compname}}
 								{{#sessionComp.compname}}<a class="nav-link text-white"
-								                            href="/comp/recommend">인재찾기</a>{{/sessionComp.compname}}
+								                            href="/comp/recommend">인재추천</a>{{/sessionComp.compname}}
 
 							</li>
 
