기업페이지(main -> updateForm) 공고수정페이지(updateForm -> postingUpdateForm) 변경

--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -287,7 +287,7 @@
 				} else if (CompSession === "2") {
 					// 역할이 2인 경우 (기업 사용자)
 					loginLink.textContent = "기업페이지";
-					loginLink.href = "/comp/main";
+					loginLink.href = "/comp/updateForm";
 				}
 
 			} else {
