--- a/src/main/resources/templates/user/loginForm.mustache
+++ b/src/main/resources/templates/user/loginForm.mustache
@@ -55,7 +55,7 @@
 				loginLink.href = "/user/updateForm";
 			} else if (CompSession === "2") {
 				loginLink.textContent = "기업페이지";
-				loginLink.href = "/comp/main";
+				loginLink.href = "/comp/updateForm";
 			}
 		} else {
 			joinLink.textContent = "회원가입";
