--- a/src/main/resources/templates/comp/compDetailOnly.mustache
+++ b/src/main/resources/templates/comp/compDetailOnly.mustache
@@ -117,7 +117,7 @@
 	<!-- 18번 -->
 		<div class="container border border-info">
 
-			<form action="/comp/main/{{sessionComp.userId}}/update" method="post" onsubmit="" class="col-auto container" id="selectform" enctype="multipart/form-data">
+			<form action="/comp/updateForm/{{sessionComp.userId}}/update" method="post" onsubmit="" class="col-auto container" id="selectform" enctype="multipart/form-data">
 				<h1 class="text-center mt-2">기업 페이지</h1>
 
 				<div class="d-flex">
