기업이 보낸 입사제안(allOfferList -> offerListCompSent) 및 기업이 받은 모든 이력서(allResumeList -> resumeListCompReceived)로 파일 변경

--- a/src/main/resources/templates/comp/offerListCompSent.mustache
+++ b/src/main/resources/templates/comp/offerListCompSent.mustache
@@ -50,7 +50,7 @@
 							<input type="hidden" value="{{statement}}">
 							<div class="statementJS2"></div>
 							<form action="/comp/posting/offer/{{recommendId}}/cancel" method="post" class="ms-1">
-								<input type="hidden" name="redirectWhere" value="allOfferList">
+								<input type="hidden" name="redirectWhere" value="offerListCompSent">
 								<input class="btn btn-sm btn-warning p-0 ps-1 pe-1 statementButton text-white" type="submit" value="제안 취소">
 							</form>
 						</td>
