--- a/src/main/resources/templates/comp/postingDetail.mustache
+++ b/src/main/resources/templates/comp/postingDetail.mustache
@@ -1,6 +1,6 @@
 {{> layout/header}}
 
-<!-- 21번 -->
+<!-- 21번 공고 상세보기-->
 
 <div class="col-auto container border border-info mb-2">
 	<h1 class="text-center mt-2">공고</h1>
@@ -14,7 +14,7 @@
 		</div>
 
 		<div class="col-8 ps-3">
-			
+
 			<div class="input-group mb-3">
 				<span class="input-group-text">회사명</span>
 				<input
