--- a/src/main/resources/templates/layout/comp2header.mustache
+++ b/src/main/resources/templates/layout/comp2header.mustache
@@ -11,9 +11,9 @@
 			<div class="m-2"></div>
 			<a href="/comp/{{sessionComp.userId}}/postingList" class="w-100 btn btn-info">구인공고 관리</a>
 			<div class="m-2"></div>
-			<a href="/comp/{{sessionComp.userId}}/allOfferList" class="w-100 btn btn-info">입사제안 목록</a>
+			<a href="/comp/{{sessionComp.userId}}/offerListCompSent" class="w-100 btn btn-info">입사제안 목록</a>
 			<div class="m-2"></div>
-			<a href="/comp/{{sessionComp.userId}}/allResumeList" class="w-100 btn btn-info">지원자 목록</a>
+			<a href="/comp/{{sessionComp.userId}}/resumeListCompReceived" class="w-100 btn btn-info">지원자 목록</a>
 			<div class="m-2"></div>
 			<!--
 			<a href="/comp/1/updateForm" class="w-100 btn btn-info">공고 수정</a>
