--- a/src/main/resources/templates/comp/resumeListCompReceived.mustache
+++ b/src/main/resources/templates/comp/resumeListCompReceived.mustache
@@ -64,7 +64,7 @@
           <div class="statementJS2"></div>
 
           <form action="/comp/posting/apply/{{ applyId }}/pass" method="post">
-            <input type="hidden" name="redirectWhere" value="allResumeList" />
+            <input type="hidden" name="redirectWhere" value="resumeListCompReceived" />
             <input
               class="btn btn-sm btn-success p-0 ps-1 pe-1 me-1 passButton"
               type="submit"
@@ -73,7 +73,7 @@
             />
           </form>
           <form action="/comp/posting/apply/{{ applyId }}/fail" method="post">
-            <input type="hidden" name="redirectWhere" value="allResumeList" />
+            <input type="hidden" name="redirectWhere" value="resumeListCompReceived" />
             <input
               class="btn btn-sm btn-danger p-0 ps-1 pe-1 failButton"
               type="submit"
