--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -196,13 +196,13 @@
 								{{^sessionComp.compname}}<a class="nav-link text-white"
 								                            href="/user/resumeManage">이력서관리</a>{{/sessionComp.compname}}
 								{{#sessionComp.compname}}<a class="nav-link text-white"
-								                            href="/comp/{{sessionComp.userId}}/allOfferList">입사제안</a>{{/sessionComp.compname}}
+								                            href="/comp/{{sessionComp.userId}}/offerListCompSent">입사제안</a>{{/sessionComp.compname}}
 							</li>
 							<li class="nav-item">
 								{{^sessionComp.compname}}<a class="nav-link text-white"
 								                            href="/user/applyList">지원내역</a>{{/sessionComp.compname}}
 								{{#sessionComp.compname}}<a class="nav-link text-white"
-								                            href="/comp/{{sessionComp.userId}}/allResumeList">지원자목록</a>{{/sessionComp.compname}}
+								                            href="/comp/{{sessionComp.userId}}/resumeListCompReceived">지원자목록</a>{{/sessionComp.compname}}
 
 							</li>
 							<li class="nav-item">
