파일명 컨벤션

--- a/src/main/resources/templates/comp/bookmarkList.mustache
+++ b/src/main/resources/templates/comp/bookmarkList.mustache
@@ -1,7 +1,7 @@
 {{> layout/header}}
 {{> layout/comp2header}}
 
-<!-- 23번 -->
+<!-- 23번 기업_이력서 북마크 페이지 -->
 
 <div class="col-9 m-auto">
 	<h1 class="text-center mt-2">이력서 북마크</h1>
