--- a/src/main/resources/templates/comp/compDetail.mustache
+++ b/src/main/resources/templates/comp/compDetail.mustache
@@ -1,7 +1,7 @@
 {{> layout/header}}
 
 
-	<!-- 18번 -->
+	<!-- 18번 기업 페이지 상세보기 -->
 		<div class="col-auto container border border-info">
 
 			<div class="">
