--- a/src/main/resources/templates/comp/resumeDetail.mustache
+++ b/src/main/resources/templates/comp/resumeDetail.mustache
@@ -1,5 +1,5 @@
 {{> layout/header}}
-<!-- 25번 -->
+<!-- 25번 이력서 상세보기 페이지-->
 
 <div class="col-auto container border border-info mb-2">
   <h1 class="text-center mt-2">이력서 상세보기</h1>
