--- a/src/main/resources/templates/comp/resumeListCompReceived.mustache
+++ b/src/main/resources/templates/comp/resumeListCompReceived.mustache
@@ -1,7 +1,7 @@
 {{> layout/header}}
 {{> layout/comp2header}}
 
-<!-- 22번 -->
+<!-- 22번 기업이 받은 모든 이력서 페이지 -->
 
 <div class="col-9 m-auto">
   <h1 class="text-center mt-2">기업이 받은 모든 이력서</h1>
