--- a/src/main/resources/templates/layout/comp2header.mustache
+++ b/src/main/resources/templates/layout/comp2header.mustache
@@ -7,7 +7,7 @@
 			<div class="m-2"></div>
 			<a href="/comp/updateForm" class="w-100 btn btn-info">기업 페이지</a>
 			<div class="m-2"></div>
-			<a href="/comp/posting/saveForm" class="w-100 btn btn-info">구인공고 등록</a>
+			<a href="/comp/postingSaveForm" class="w-100 btn btn-info">구인공고 등록</a>
 			<div class="m-2"></div>
 			<a href="/comp/{{sessionComp.userId}}/postingList" class="w-100 btn btn-info">구인공고 관리</a>
 			<div class="m-2"></div>
@@ -23,6 +23,6 @@
 			-->
 			<a href="/comp/{{sessionComp.userId}}/bookmarkList" class="w-100 btn btn-info">이력서 북마크</a>
 			<div class="m-2"></div>
-			<a href="/comp/recommend" class="w-100 btn btn-info">인재 추천</a>
+			<a href="/comp/recommendForm" class="w-100 btn btn-info">인재 추천</a>
 			<div class="m-2"></div>
 		</div>
