--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -184,7 +184,7 @@
 								{{^sessionComp.compname}}<a class="nav-link text-white"
 								                            href="/">채용정보</a>{{/sessionComp.compname}}
 								{{#sessionComp.compname}}<a class="nav-link text-white"
-								                            href="/comp/posting/saveForm">공고등록</a>{{/sessionComp.compname}}
+								                            href="/comp/postingSaveForm">공고등록</a>{{/sessionComp.compname}}
 							</li>
 							<li class="nav-item">
 								{{^sessionComp.compname}}<a class="nav-link text-white"
@@ -216,7 +216,7 @@
 								{{^sessionComp.compname}}<a class="nav-link text-white"
 								                            href="/user/recommendForm">기업추천</a>{{/sessionComp.compname}}
 								{{#sessionComp.compname}}<a class="nav-link text-white"
-								                            href="/comp/recommend">인재추천</a>{{/sessionComp.compname}}
+								                            href="/comp/recommendForm">인재추천</a>{{/sessionComp.compname}}
 
 							</li>
 
