파일 이름 및 경로 카테고리화

--- a/src/main/resources/templates/comp/offer/detailOnly.mustache
+++ b/src/main/resources/templates/comp/offer/detailOnly.mustache
@@ -175,7 +175,7 @@
 				<button type="button" class="w-100 btn btn-success me-1 ms-0" onclick="submitForm()">입사 제안</button>
 			</div>
 
-			<form action="/comp/bookmarkList/save" method="post" class="w-100">
+			<form action="/comp/bookmark/list/save" method="post" class="w-100">
 				<button class="w-100 btn btn-danger ms-1 me-0" onclick="closeWindow()">제안 취소</button>
 			</form>
 
