--- a/src/main/resources/templates/comp/offer/listCompSent.mustache
+++ b/src/main/resources/templates/comp/offer/listCompSent.mustache
@@ -7,7 +7,7 @@
 
 		<div class="col-9 m-auto">
 			<h1 class=" text-center mt-2">기업이 보낸 모든 입사제안</h1>
-			<div class="text-center mb-4"><a href="/comp/{{sessionComp.userId}}/postingList">개별 구인공고 기준으로 보기</a></div>
+			<div class="text-center mb-4"><a href="/comp/{{sessionComp.userId}}/posting/list">개별 구인공고 기준으로 보기</a></div>
 
 
 
