--- a/src/main/resources/templates/comp/resume/detailOnly.mustache
+++ b/src/main/resources/templates/comp/resume/detailOnly.mustache
@@ -183,7 +183,7 @@
 					<a href="javascript:void(0);" class="w-100 btn btn-success me-1 ms-0" onclick="openNewWindow2('/offer/newWindow/{{resume.id}}')">입사 제안</a>
 				</div>
 
-				<form action="/comp/bookmarkList/save" method="post" class="w-100">
+				<form action="/comp/bookmark/list/save" method="post" class="w-100">
 					{{#resume}}
 					<input type="hidden" name="ResumeId" value="{{id}}">
 					{{/resume}}
