--- a/src/main/resources/templates/layout/comp2header.mustache
+++ b/src/main/resources/templates/layout/comp2header.mustache
@@ -7,22 +7,23 @@
 			<div class="m-2"></div>
 			<a href="/comp/updateForm" class="w-100 btn btn-info">기업 페이지</a>
 			<div class="m-2"></div>
-			<a href="/comp/postingSaveForm" class="w-100 btn btn-info">구인공고 등록</a>
+			<a href="/comp/posting/saveForm" class="w-100 btn btn-info">구인공고 등록</a>
 			<div class="m-2"></div>
-			<a href="/comp/{{sessionComp.userId}}/postingList" class="w-100 btn btn-info">구인공고 관리</a>
+			<a href="/comp/{{sessionComp.userId}}/posting/list" class="w-100 btn btn-info">구인공고 관리</a>
 			<div class="m-2"></div>
-			<a href="/comp/{{sessionComp.userId}}/offerListCompSent" class="w-100 btn btn-info">입사제안 목록</a>
+			<a href="/comp/{{sessionComp.userId}}/offer/listCompSent" class="w-100 btn btn-info">입사제안 목록</a>
 			<div class="m-2"></div>
-			<a href="/comp/{{sessionComp.userId}}/resumeListCompReceived" class="w-100 btn btn-info">지원자 목록</a>
+			<a href="/comp/{{sessionComp.userId}}/resume/listCompReceived" class="w-100 btn btn-info">지원자 목록</a>
 			<div class="m-2"></div>
-			<!--
-			<a href="/comp/1/updateForm" class="w-100 btn btn-info">공고 수정</a>
+			<a href="/comp/{{sessionComp.userId}}/bookmark/list" class="w-100 btn btn-info">이력서 북마크</a>
 			<div class="m-2"></div>
-			<a href="#" class="w-100 btn btn-info">지원자 내역</a>
-			<div class="m-2"></div>
-			-->
-			<a href="/comp/{{sessionComp.userId}}/bookmarkList" class="w-100 btn btn-info">이력서 북마크</a>
-			<div class="m-2"></div>
-			<a href="/comp/recommendForm" class="w-100 btn btn-info">인재 추천</a>
+			<a href="/comp/recommend/form" class="w-100 btn btn-info">인재 추천</a>
 			<div class="m-2"></div>
 		</div>
+
+		<!--
+<a href="/comp/1/updateForm" class="w-100 btn btn-info">공고 수정</a>
+<div class="m-2"></div>
+<a href="#" class="w-100 btn btn-info">지원자 내역</a>
+<div class="m-2"></div>
+-->
