--- a/src/main/resources/templates/layout/header.mustache
+++ b/src/main/resources/templates/layout/header.mustache
@@ -184,39 +184,39 @@
 								{{^sessionComp.compname}}<a class="nav-link text-white"
 								                            href="/">채용정보</a>{{/sessionComp.compname}}
 								{{#sessionComp.compname}}<a class="nav-link text-white"
-								                            href="/comp/postingSaveForm">공고등록</a>{{/sessionComp.compname}}
+								                            href="/comp/posting/saveForm">공고등록</a>{{/sessionComp.compname}}
 							</li>
 							<li class="nav-item">
 								{{^sessionComp.compname}}<a class="nav-link text-white"
-								                            href="/user/resumeForm">이력서등록</a>{{/sessionComp.compname}}
+								                            href="/user/resume/form">이력서등록</a>{{/sessionComp.compname}}
 								{{#sessionComp.compname}}<a class="nav-link text-white"
-								                            href="/comp/{{sessionComp.userId}}/postingList">공고관리</a>{{/sessionComp.compname}}
+								                            href="/comp/{{sessionComp.userId}}/posting/list">공고관리</a>{{/sessionComp.compname}}
 							</li>
 							<li class="nav-item">
 								{{^sessionComp.compname}}<a class="nav-link text-white"
-								                            href="/user/resumeManage">이력서관리</a>{{/sessionComp.compname}}
+								                            href="/user/resume/manage">이력서관리</a>{{/sessionComp.compname}}
 								{{#sessionComp.compname}}<a class="nav-link text-white"
-								                            href="/comp/{{sessionComp.userId}}/offerListCompSent">입사제안</a>{{/sessionComp.compname}}
+								                            href="/comp/{{sessionComp.userId}}/offer/listCompSent">입사제안</a>{{/sessionComp.compname}}
 							</li>
 							<li class="nav-item">
 								{{^sessionComp.compname}}<a class="nav-link text-white"
-								                            href="/user/applyList">지원내역</a>{{/sessionComp.compname}}
+								                            href="/user/apply/list">지원내역</a>{{/sessionComp.compname}}
 								{{#sessionComp.compname}}<a class="nav-link text-white"
-								                            href="/comp/{{sessionComp.userId}}/resumeListCompReceived">지원자목록</a>{{/sessionComp.compname}}
+								                            href="/comp/{{sessionComp.userId}}/resume/listCompReceived">지원자목록</a>{{/sessionComp.compname}}
 
 							</li>
 							<li class="nav-item">
 								{{^sessionComp.compname}}<a class="nav-link text-white"
-								                            href="/user/bookmarkForm">북마크</a>{{/sessionComp.compname}}
+								                            href="/user/bookmark/form">북마크</a>{{/sessionComp.compname}}
 								{{#sessionComp.compname}}<a class="nav-link text-white"
-								                            href="/comp/{{sessionComp.userId}}/bookmarkList">북마크</a>{{/sessionComp.compname}}
+								                            href="/comp/{{sessionComp.userId}}/bookmark/list">북마크</a>{{/sessionComp.compname}}
 
 							</li>
 							<li class="nav-item">
 								{{^sessionComp.compname}}<a class="nav-link text-white"
-								                            href="/user/recommendForm">기업추천</a>{{/sessionComp.compname}}
+								                            href="/user/recommend/form">기업추천</a>{{/sessionComp.compname}}
 								{{#sessionComp.compname}}<a class="nav-link text-white"
-								                            href="/comp/recommendForm">인재추천</a>{{/sessionComp.compname}}
+								                            href="/comp/recommend/form">인재추천</a>{{/sessionComp.compname}}
 
 							</li>
 
