--- a/src/main/resources/templates/user/apply/form.mustache
+++ b/src/main/resources/templates/user/apply/form.mustache
@@ -32,7 +32,7 @@
 		</div>
 
 		<div class="ms-2 me-2">
-			<a href="/user/resumeForm" class="w-100 btn btn-success">이력서 등록하기</a>
+			<a href="/user/resume/form" class="w-100 btn btn-success">이력서 등록하기</a>
 		</div>
 
 		<div class="p-3 m-3 d-flex flex-column align-items-center">
