--- a/src/main/resources/templates/comp/posting/list.mustache
+++ b/src/main/resources/templates/comp/posting/list.mustache
@@ -36,8 +36,8 @@
 				<div class="col-4">{{desc}}</div>
 
 				<div class="d-flex flex-column justify-content-between">
-					<a href="/comp/posting/{{id}}/resumeList" class="btn btn-success btn-sm mb-1">지원자 보기</a>
-					<a href="/comp/posting/{{id}}/offerList" class="btn btn-primary btn-sm mb-1">입사 제안 보기</a>
+					<a href="/comp/posting/{{id}}/resume/list" class="btn btn-success btn-sm mb-1">지원자 보기</a>
+					<a href="/comp/posting/{{id}}/offer/list" class="btn btn-primary btn-sm mb-1">입사 제안 보기</a>
 					<a href="/comp/posting/{{id}}/updateForm" class="btn btn-warning btn-sm mb-1 text-white">수정하기</a>
 					<form action="/comp/posting/{{id}}/delete" method="post">
 						<input class="btn btn-danger btn-sm w-100" type="submit" value="삭제하기">
