--- a/src/main/resources/templates/comp/recommend/form.mustache
+++ b/src/main/resources/templates/comp/recommend/form.mustache
@@ -12,7 +12,7 @@
 			
 
 
-			<form action="/comp/recommend" method="get" id="selectform" class="d-flex justify-content-around m-1">
+			<form action="/comp/recommend/form" method="get" id="selectform" class="d-flex justify-content-around m-1">
 
 				<div class="w-50 m-1 me-2 mb-2 border border-info">
 					<h4 class="mt-2 text-center">기술별</h4>
@@ -124,7 +124,7 @@
 						</div>
 						
 						<div class="align-self-center mb-1">
-							<form class="" action="/comp/bookmarkList/saveAll" method="post">
+							<form class="" action="/comp/bookmark/list/saveAll" method="post">
 								{{#resumeList}}
 								<input type="hidden" name="ResumeIdList" value="{{id}}">
 								{{/resumeList}}
