--- a/src/main/resources/templates/comp/resume/listCompReceived.mustache
+++ b/src/main/resources/templates/comp/resume/listCompReceived.mustache
@@ -6,7 +6,7 @@
 <div class="col-9 m-auto">
   <h1 class="text-center mt-2">기업이 받은 모든 이력서</h1>
   <div class="text-center mb-4">
-    <a href="/comp/{{ sessionComp.userId }}/postingList"
+    <a href="/comp/{{ sessionComp.userId }}/posting/list"
       >개별 구인공고 기준으로 보기</a
     >
   </div>
