--- a/src/main/resources/templates/user/bookmark/form.mustache
+++ b/src/main/resources/templates/user/bookmark/form.mustache
@@ -10,15 +10,15 @@
 			<div class="m-2"></div>
 			<a href="/user/updateForm" class="w-100 btn btn-info">마이 페이지</a>
 			<div class="m-2"></div>
-			<a href="/user/resumeForm" class="w-100 btn btn-info">이력서 등록</a>
+			<a href="/user/resume/form" class="w-100 btn btn-info">이력서 등록</a>
 			<div class="m-2"></div>
-			<a href="/user/resumeManage" class="w-100 btn btn-info">이력서 관리</a>
+			<a href="/user/resume/manage" class="w-100 btn btn-info">이력서 관리</a>
 			<div class="m-2"></div>
-			<a href="/user/applyList" class="w-100 btn btn-info">지원내역</a>
+			<a href="/user/apply/list" class="w-100 btn btn-info">지원내역</a>
 			<div class="m-2"></div>
-			<a href="/user/bookmarkForm" class="w-100 btn btn-info">북마크</a>
+			<a href="/user/bookmark/form" class="w-100 btn btn-info">북마크</a>
 			<div class="m-2"></div>
-			<a href="/user/recommendForm" class="w-100 btn btn-info">기업추천</a>
+			<a href="/user/recommend/form" class="w-100 btn btn-info">기업추천</a>
 			<div class="m-2"></div>
 		</div>
 
@@ -67,7 +67,7 @@
 						</div>
 					</div>
 					<div class="mt-4 mb-4">
-						<button type="button" action="/user/bookmarkForm/delete" method="post"
+						<button type="button" action="/user/bookmark/form/delete" method="post"
 						        class="btn btn-danger delete-button"
 						        data-posting-id="{{id}}">
 							삭제
@@ -104,7 +104,7 @@
 			if (confirm("삭제하시겠습니까?")) {
 				// 사용자가 확인을 클릭한 경우
 				// 해당 아이템을 삭제하는 코드 추가
-				fetch("/user/bookmarkForm/delete", {
+				fetch("/user/bookmark/form/delete", {
 					method: "POST",
 					headers: {
 						"Content-Type": "application/x-www-form-urlencoded",
