--- a/src/main/resources/templates/user/resume/form.mustache
+++ b/src/main/resources/templates/user/resume/form.mustache
@@ -2,25 +2,25 @@
 <div class="d-flex mb-3">
   <div class="col-2"></div>
   <div class="class col-8 h-auto d-flex border border-info">
-    <div class="bg-info col-2">
-      <div class="m-2"></div>
-      <a href="/user/updateForm" class="w-100 btn btn-info">마이 페이지</a>
-      <div class="m-2"></div>
-      <a href="/user/resumeForm" class="w-100 btn btn-info">이력서 등록</a>
-      <div class="m-2"></div>
-      <a href="/user/resumeManage" class="w-100 btn btn-info">이력서 관리</a>
-      <div class="m-2"></div>
-      <a href="/user/applyList" class="w-100 btn btn-info">지원내역</a>
-      <div class="m-2"></div>
-      <a href="/user/bookmarkForm" class="w-100 btn btn-info">북마크</a>
-      <div class="m-2"></div>
-      <a href="/user/recommendForm" class="w-100 btn btn-info">기업추천</a>
-      <div class="m-2"></div>
-    </div>
+	  <div class="bg-info col-2">
+		  <div class="m-2"></div>
+		  <a href="/user/updateForm" class="w-100 btn btn-info">마이 페이지</a>
+		  <div class="m-2"></div>
+		  <a href="/user/resume/form" class="w-100 btn btn-info">이력서 등록</a>
+		  <div class="m-2"></div>
+		  <a href="/user/resume/manage" class="w-100 btn btn-info">이력서 관리</a>
+		  <div class="m-2"></div>
+		  <a href="/user/apply/list" class="w-100 btn btn-info">지원내역</a>
+		  <div class="m-2"></div>
+		  <a href="/user/bookmark/form" class="w-100 btn btn-info">북마크</a>
+		  <div class="m-2"></div>
+		  <a href="/user/recommend/form" class="w-100 btn btn-info">기업추천</a>
+		  <div class="m-2"></div>
+	  </div>
 
     <div class="col-9 ms-3">
       <h1 class="text-center mt-2">이력서 등록</h1>
-      <form action="/user/resumeSave" method="post" enctype="multipart/form-data">
+      <form action="/user/resume/save" method="post" enctype="multipart/form-data">
         <div class="d-flex">
           <div class="m-2 col-4 d-flex flex-column align-items-center">
             <img id="preview"
