--- a/src/main/resources/templates/user/updateForm.mustache
+++ b/src/main/resources/templates/user/updateForm.mustache
@@ -9,15 +9,15 @@
 			<div class="m-2"></div>
 			<a href="/user/updateForm" class="w-100 btn btn-info">마이 페이지</a>
 			<div class="m-2"></div>
-			<a href="/user/resumeForm" class="w-100 btn btn-info">이력서 등록</a>
+			<a href="/user/resume/form" class="w-100 btn btn-info">이력서 등록</a>
 			<div class="m-2"></div>
-			<a href="/user/resumeManage" class="w-100 btn btn-info">이력서 관리</a>
+			<a href="/user/resume/manage" class="w-100 btn btn-info">이력서 관리</a>
 			<div class="m-2"></div>
-			<a href="/user/applyList" class="w-100 btn btn-info">지원내역</a>
+			<a href="/user/apply/list" class="w-100 btn btn-info">지원내역</a>
 			<div class="m-2"></div>
-			<a href="/user/bookmarkForm" class="w-100 btn btn-info">북마크</a>
+			<a href="/user/bookmark/form" class="w-100 btn btn-info">북마크</a>
 			<div class="m-2"></div>
-			<a href="/user/recommendForm" class="w-100 btn btn-info">기업추천</a>
+			<a href="/user/recommend/form" class="w-100 btn btn-info">기업추천</a>
 			<div class="m-2"></div>
 		</div>
 		<div class="col-9 ms-3">
